[tool.poetry]
name = "advanced data structures"
version = "0.1.0"
description = ""
authors = ["Aryan Kumar"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
faker = "^23.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
